Flask/microservices/system_design/python/src/gateway/manifests/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: fela14/gateway:latest
          ports:
            - containerPort: 8080
        - name: RABBITMQ_USER
          valueFrom:
            secretKeyRef:
              name: rabbitmq-credentials
              key: RABBITMQ_USER
        - name: RABBITMQ_PASS
          valueFrom:
            secretKeyRef:
              name: rabbitmq-credentials
              key: RABBITMQ_PASS
        - name: RABBIT_QUEUE
          valueFrom:
            configMapKeyRef:
              name: gateway-configmap
              key: RABBIT_QUEUE
        - name: RABBIT_HOST
          valueFrom:
            configMapKeyRef:
              name: gateway-configmap
              key: RABBIT_HOST

            # - secretRef: name: gateway-secret
