Flask/microservices/system_design/python/src/gateway/manifests/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080        # Port exposed to other pods / cluster
      targetPort: 8080  # Port the container listens on
  type: ClusterIP       # Default; accessible only inside the cluster
